# code-agent-learn

./: .env.example  .gitignore  README.md  WEB_TOOLS_README.md  main.py  pyproject.toml  skills-lock.json
agents/: agent.py  background_task.py  loop.py  loop_stream.py  output_handler.py  prompt.py  sub_agent.py  task.py  teams.py  todo.py  tools.py  watch_skill.py
agents/utils/: BashSecurityValidator.py  Memory.py  Permission.py  context_compression.py  web_tools.py
service/: app.py  main.py  session.py
skills/find-skills/: SKILL.md
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  api.ts  index.css  types.ts
