[project]
name = "code-agent-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "openai>=2.30.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]
