[project]
name = "code-agent-learn"
version = "0.1.0"
description = "从零构建的 AI 编程助手，模仿 Claude Code 的 Agentic 工作模式"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.93.0",
    "ddgs>=9.13.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.0",
    "html2text>=2024.2.26",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "openai>=2.30.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "watchdog>=6.0.0",
]

[project.scripts]
agent-cli = "main:main"
agent-web = "service.main:main"
